--- a/src/GUI/SecondWindow.form
+++ b/src/GUI/SecondWindow.form
@@ -67,7 +67,7 @@
           <text value="NASTĘPNA"/>
         </properties>
       </component>
-      <component id="264f" class="javax.swing.JLabel">
+      <component id="264f" class="javax.swing.JLabel" binding="numerIteracji">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
